@@ -80,6 +80,11 @@ gwen {
     }
     mode = "declarative"          # declarative|imperative
   }
+  input {
+    data {
+      readOnly = true
+    }
+  }
   launch {                        # Default launch options
     options {                     # See: https://gweninterpreter.org/docs/settings#launch-settings
       batch  = false
